--- a/src/main/resources/view/dashboard1.fxml
+++ b/src/main/resources/view/dashboard1.fxml
@@ -1,8 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="1080.0" prefWidth="1548.0" style="-fx-background-color: #9189F0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.Dashboard1Controller">
-
+<AnchorPane prefHeight="1080.0" prefWidth="1794.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.Dashboard1Controller">
+   <children>
+      <ImageView fitHeight="1097.0" fitWidth="1779.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Rectangle%2037773.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="715.0" fitWidth="756.0" layoutX="88.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/dash.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="437.0" fitWidth="1518.0" layoutX="94.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Frame%2035.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="106.0" layoutY="371.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="690.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" />
+      <Button layoutX="110.0" layoutY="557.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="690.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" />
+      <Button layoutX="112.0" layoutY="752.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="690.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" />
+      <ImageView fitHeight="627.0" fitWidth="685.0" layoutX="858.0" layoutY="346.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/dash.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="142.0" layoutY="376.0" prefHeight="149.0" prefWidth="331.0" text="Total Employees ">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="139.0" layoutY="567.0" prefHeight="149.0" prefWidth="323.0" text="Total Orders">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="124.0" layoutY="757.0" prefHeight="158.0" prefWidth="312.0" text="Total Customers">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="734.0" layoutY="298.0" prefHeight="29.0" prefWidth="54.0" text="Today's">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="734.0" layoutY="319.0" prefHeight="17.0" prefWidth="52.0" text="Summery" />
+      <Label layoutX="597.0" layoutY="390.0" prefHeight="140.0" prefWidth="168.0" text="68">
+         <font>
+            <Font name="System Bold" size="72.0" />
+         </font>
+      </Label>
+      <Label layoutX="593.0" layoutY="570.0" prefHeight="140.0" prefWidth="196.0" text="80">
+         <font>
+            <Font name="System Bold" size="72.0" />
+         </font>
+      </Label>
+      <Label layoutX="593.0" layoutY="768.0" prefHeight="140.0" prefWidth="190.0" text="40">
+         <font>
+            <Font name="System Bold" size="72.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="194.0" fitWidth="727.0" layoutX="833.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Frame%2039.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="timeTxt" layoutX="849.0" layoutY="97.0" prefHeight="140.0" prefWidth="335.0" text="Label">
+         <font>
+            <Font name="System Bold" size="72.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
