--- a/src/main/resources/view/payment.fxml
+++ b/src/main/resources/view/payment.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXClippedPane?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -20,7 +21,6 @@
          </image>
       </ImageView>
       <TextField fx:id="idTxt" layoutX="1058.0" layoutY="183.0" prefHeight="44.0" prefWidth="403.0" promptText="d" style="-fx-background-color: tra;" />
-      <TextField fx:id="empIdTxt" layoutX="1058.0" layoutY="309.0" prefHeight="44.0" prefWidth="403.0" promptText="eid" style="-fx-background-color: tra;" />
       <TextField fx:id="dateTxt" layoutX="1058.0" layoutY="434.0" prefHeight="44.0" prefWidth="403.0" promptText="d" style="-fx-background-color: tra;" />
       <TextField fx:id="countTxt" layoutX="1058.0" layoutY="555.0" prefHeight="44.0" prefWidth="403.0" promptText="s" style="-fx-background-color: tra;" />
       <JFXButton layoutX="1053.0" layoutY="652.0" onAction="#addOnAction" prefHeight="52.0" prefWidth="414.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Add salory">
@@ -40,5 +40,6 @@
             <TableColumn fx:id="coldelete" prefWidth="144.3333740234375" text="delete" />
         </columns>
       </TableView>
+      <JFXComboBox fx:id="empIdTxt" layoutX="1058.0" layoutY="307.0" prefHeight="44.0" prefWidth="403.0" />
     </children>
 </AnchorPane>
