--- a/src/main/resources/view/login_page.fxml
+++ b/src/main/resources/view/login_page.fxml
@@ -14,7 +14,7 @@
             <Image url="@../img/Frame%2010.png" />
          </image>
       </ImageView>
-      <JFXButton fx:id="loginbtn" layoutX="1301.0" layoutY="580.0" onAction="#loginbtnOnAction" prefHeight="71.0" prefWidth="433.0" styleClass="button-with-style" stylesheets="@../style/loginbutton.css" text="Login">
+      <JFXButton fx:id="loginbtn" layoutX="1301.0" layoutY="580.0" onAction="#loginbtnOnAction" onKeyPressed="#keyOnAction" prefHeight="71.0" prefWidth="433.0" styleClass="button-with-style" stylesheets="@../style/loginbutton.css" text="Login">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></JFXButton>
