--- a/src/main/resources/view/Customer_orders_add.fxml
+++ b/src/main/resources/view/Customer_orders_add.fxml
@@ -19,24 +19,20 @@
          <font>
             <Font name="System Bold" size="24.0" />
          </font></JFXButton>
-      <TextField fx:id="idTxt" layoutX="734.0" layoutY="255.0" prefHeight="45.0" prefWidth="452.0" promptText="Order ID" style="-fx-background-color: tra;">
+      <TextField fx:id="idTxt" layoutX="734.0" layoutY="199.0" prefHeight="45.0" prefWidth="452.0" promptText="Order ID" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="catagaryTxt" layoutX="734.0" layoutY="430.0" prefHeight="45.0" prefWidth="452.0" promptText="Catagary" style="-fx-background-color: tra;">
+      <TextField fx:id="WeigthTxt" layoutX="732.0" layoutY="433.0" prefHeight="45.0" prefWidth="452.0" promptText="Weigth" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="WeigthTxt" layoutX="734.0" layoutY="516.0" prefHeight="45.0" prefWidth="452.0" promptText="Weigth" style="-fx-background-color: tra;">
+      <TextField fx:id="dateTxt" layoutX="734.0" layoutY="510.0" prefHeight="45.0" prefWidth="452.0" promptText="Date" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="dateTxt" layoutX="734.0" layoutY="604.0" prefHeight="45.0" prefWidth="452.0" promptText="Date" style="-fx-background-color: tra;">
-         <font>
-            <Font size="18.0" />
-         </font></TextField>
-      <TextField fx:id="descreptionTxt" layoutX="734.0" layoutY="689.0" prefHeight="45.0" prefWidth="452.0" promptText="Descreption" style="-fx-background-color: tra;">
+      <TextField fx:id="descreptionTxt" layoutX="734.0" layoutY="589.0" prefHeight="45.0" prefWidth="452.0" promptText="Descreption" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
@@ -46,6 +42,12 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
-      <JFXComboBox fx:id="cIdTxt" layoutX="734.0" layoutY="341.0" prefHeight="45.0" prefWidth="452.0" />
+      <JFXComboBox fx:id="cIdTxt" layoutX="734.0" layoutY="274.0" prefHeight="45.0" prefWidth="452.0" />
+      <TextField fx:id="paymentTxt" layoutX="734.0" layoutY="667.0" prefHeight="45.0" prefWidth="452.0" promptText="1Kg Price" style="-fx-background-color: tra;">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
+      <JFXComboBox fx:id="catagaryTxt" layoutX="732.0" layoutY="351.0" prefHeight="53.0" prefWidth="452.0" promptText="Carogary" />
    </children>
 </AnchorPane>
