--- a/src/main/resources/view/supplier_orders.fxml
+++ b/src/main/resources/view/supplier_orders.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXClippedPane?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -20,27 +21,29 @@
          </image>
       </ImageView>
       <TextField fx:id="sOidTxt" layoutX="1013.0" layoutY="178.0" prefHeight="44.0" prefWidth="407.0" promptText="id" style="-fx-background-color: tra;" />
-      <TextField fx:id="sIdTxt" layoutX="1013.0" layoutY="299.0" prefHeight="44.0" prefWidth="407.0" promptText="sid" style="-fx-background-color: tra;" />
       <TextField fx:id="dateTxt" layoutX="1013.0" layoutY="418.0" prefHeight="44.0" prefWidth="407.0" promptText="d" style="-fx-background-color: tra;" />
       <TextField fx:id="weigthTxt" layoutX="1013.0" layoutY="540.0" prefHeight="44.0" prefWidth="407.0" promptText="w" style="-fx-background-color: tra;" />
-      <JFXButton layoutX="1005.0" layoutY="705.0" onAction="#addOnAction" prefHeight="54.0" prefWidth="429.0" styleClass="button-with-style" stylesheets="@../style/loginbutton.css" text="Add Supply Orders">
+      <JFXButton layoutX="1009.0" layoutY="751.0" onAction="#addOnAction" prefHeight="54.0" prefWidth="429.0" styleClass="button-with-style" stylesheets="@../style/loginbutton.css" text="Add Supply Orders">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="1010.0" layoutY="808.0" onAction="#updateOnAction" prefHeight="54.0" prefWidth="429.0" styleClass="button-with-style" stylesheets="@../style/updatebtn.css" text="Update Orders ">
+      <JFXButton layoutX="1011.0" layoutY="824.0" onAction="#updateOnAction" prefHeight="54.0" prefWidth="429.0" styleClass="button-with-style" stylesheets="@../style/updatebtn.css" text="Update Orders ">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
       <TableView fx:id="tbl" layoutX="5.0" layoutY="79.0" prefHeight="824.0" prefWidth="829.0" stylesheets="@../style/tableCss.css">
         <columns>
-          <TableColumn fx:id="colSoId" prefWidth="119.0" text="C1" />
-          <TableColumn fx:id="colSid" prefWidth="164.6666259765625" text="C2" />
-            <TableColumn fx:id="colDate" prefWidth="194.3333740234375" text="C2" />
-            <TableColumn fx:id="colWeigth" prefWidth="174.0" text="C2" />
-            <TableColumn fx:id="colDelete" prefWidth="164.33331298828125" text="C2" />
+          <TableColumn fx:id="colSoId" prefWidth="119.0" text="Order ID " />
+          <TableColumn fx:id="colSid" prefWidth="134.3333282470703" text="Supplier ID" />
+            <TableColumn fx:id="colDate" prefWidth="171.33334350585938" text="Date" />
+            <TableColumn fx:id="colWeigth" prefWidth="121.66668701171875" text="Weigth" />
+            <TableColumn fx:id="colPayment" prefWidth="152.33331298828125" text="payment" />
+            <TableColumn fx:id="colDelete" prefWidth="126.3333740234375" text="Deelete" />
         </columns>
       </TableView>
+      <JFXComboBox fx:id="sIdTxt" layoutX="1011.0" layoutY="293.0" prefHeight="44.0" prefWidth="407.0" />
+      <TextField fx:id="paymentTxt" layoutX="1025.0" layoutY="658.0" prefHeight="44.0" prefWidth="388.0" promptText="Payment" style="-fx-background-color: tra;" />
     </children>
 </AnchorPane>
