--- a/src/main/resources/view/customer_add_page.fxml
+++ b/src/main/resources/view/customer_add_page.fxml
@@ -33,7 +33,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXButton>
-      <TextField fx:id="cusidTxt" layoutX="737.0" layoutY="254.0" prefHeight="44.0" prefWidth="445.0" promptText="Customer Id" style="-fx-background-color: tra;">
+      <TextField fx:id="cusidTxt" layoutX="737.0" layoutY="254.0" onKeyPressed="#searchcusOnAction" prefHeight="44.0" prefWidth="445.0" promptText="Customer Id" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
@@ -50,5 +50,6 @@
             <Font size="18.0" />
          </font></TextField>
       <JFXComboBox fx:id="empidTxt" layoutX="734.0" layoutY="334.0" prefHeight="55.0" prefWidth="451.0" stylesheets="@../style/comboBox.css" />
+      <JFXButton layoutX="680.0" layoutY="875.0" onAction="#searchOnAction" prefHeight="34.0" prefWidth="299.0" text="search" />
     </children>
 </AnchorPane>
