--- a/src/main/resources/view/employee_page.fxml
+++ b/src/main/resources/view/employee_page.fxml
@@ -18,7 +18,7 @@
             <Image url="@../img/Frame%2018.png" />
          </image>
       </ImageView>
-      <TextField fx:id="employeeIdTxt" layoutX="204.0" layoutY="123.0" prefHeight="53.0" prefWidth="551.0" promptText="Employee Id" style="-fx-background-color: tra;">
+      <TextField fx:id="employeeIdTxt" layoutX="204.0" layoutY="123.0" onKeyPressed="#SearchOnAction" prefHeight="53.0" prefWidth="551.0" promptText="Employee Id" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font>
