--- a/src/main/resources/view/leves_stoke_page.fxml
+++ b/src/main/resources/view/leves_stoke_page.fxml
@@ -26,7 +26,7 @@
             <TableColumn fx:id="colDelete" prefWidth="131.0" text="delete" />
         </columns>
       </TableView>
-      <TextField fx:id="idTxt" layoutX="142.0" layoutY="221.0" prefHeight="44.0" prefWidth="415.0" promptText="id" style="-fx-background-color: tra;">
+      <TextField fx:id="idTxt" layoutX="142.0" layoutY="221.0" onKeyPressed="#searchOnAction" prefHeight="44.0" prefWidth="415.0" promptText="id" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font>
