--- a/src/main/resources/view/leves_stoke_page.fxml
+++ b/src/main/resources/view/leves_stoke_page.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -17,7 +18,7 @@
             <Image url="@../img/levesStoke%20page.png" />
          </image>
       </ImageView>
-      <TableView fx:id="table" layoutX="678.0" layoutY="40.0" prefHeight="942.0" prefWidth="892.0" style="-fx-background-color: rgba(212, 204, 244, 1);" stylesheets="@../style/tableCss.css">
+      <TableView fx:id="table" layoutX="678.0" layoutY="40.0" prefHeight="942.0" prefWidth="892.0" stylesheets="@../style/tableCss.css">
         <columns>
           <TableColumn fx:id="colid" prefWidth="156.0" text="id" />
             <TableColumn fx:id="colWeigth" prefWidth="124.0" text="weigth" />
@@ -36,12 +37,12 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="sDateTxt" layoutX="152.0" layoutY="417.0" prefHeight="52.0" prefWidth="396.0" promptText="sD" style="-fx-background-color: tra;">
+      <TextField layoutX="152.0" layoutY="126.0" prefHeight="52.0" prefWidth="396.0" promptText="sD" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="eDateTxt" layoutX="161.0" layoutY="520.0" prefHeight="44.0" prefWidth="396.0" promptText="eD" style="-fx-background-color: tra;">
+      <TextField layoutX="162.0" layoutY="588.0" prefHeight="44.0" prefWidth="396.0" promptText="eD" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font>
@@ -55,5 +56,7 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
+      <DatePicker fx:id="sDateTxt" layoutX="154.0" layoutY="420.0" prefHeight="44.0" prefWidth="406.0" />
+      <DatePicker fx:id="eDateTxt" layoutX="147.0" layoutY="524.0" prefHeight="44.0" prefWidth="415.0" />
     </children>
 </AnchorPane>
