--- a/src/main/resources/view/fogetpw.fxml
+++ b/src/main/resources/view/fogetpw.fxml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="root" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.FogetpwController">
-
+<AnchorPane fx:id="root" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.FogetpwController">
+   <children>
+      <ImageView fitHeight="1080.0" fitWidth="1920.0" layoutX="2.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/fogotpw%20page.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="215.0" layoutY="542.0" mnemonicParsing="false" onAction="#emailOnAction" prefHeight="46.0" prefWidth="155.0" style="-fx-background-color: tra;" text="Email">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
