--- a/src/main/resources/view/fogetpw.fxml
+++ b/src/main/resources/view/fogetpw.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="root" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.FogetpwController">
    <children>
@@ -13,10 +13,7 @@
             <Image url="@../img/fogotpw%20page.png" />
          </image>
       </ImageView>
-      <Button layoutX="215.0" layoutY="542.0" mnemonicParsing="false" onAction="#emailOnAction" prefHeight="46.0" prefWidth="155.0" style="-fx-background-color: tra;" text="Email">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
+      <JFXButton layoutX="234.0" layoutY="598.0" onAction="#emailOnAction" prefHeight="76.0" prefWidth="203.0" text="Email" />
+      <TextField fx:id="emailTxt" layoutX="261.0" layoutY="531.0" prefHeight="50.0" prefWidth="463.0" />
    </children>
 </AnchorPane>
